--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ h1 {
 }
 body {
   margin: 0;
+    padding-bottom: 60px;
   font-family: Arial, Helvetica, sans-serif;
     background:linear-gradient(darkgray, white) no-repeat center center fixed;
     background-repeat: no-repeat;
@@ -44,29 +45,7 @@ p {
     color: #333;
     word-wrap: break-word;
 }
-.profpic{
-    width:1000px;
-    position:absolute;
-    top:15%;
-    right:50%;
-    float: right;
-    width:50%;
-    vertical-align:middle;
-    display: inline-block;
-}
 
-.columnwrapper{
-    overflow: auto;
-    height:1000px;
-    position: relative;
-}
-
-.pwrapper{
-    float:right;
-    width:50%;
-    top:100px;
-    vertical-align: middle;
-    display: inline-block;
 }
 .imagewrapper{
     position: absolute;
@@ -77,8 +56,21 @@ p {
 ul.posts li {
     list-style: none;
 }
-
+ul.posts { 
+    margin: 20px auto 40px; 
+    font-size: 1.5em;
+}
+#body {
+   padding:10px;
+   padding-bottom:60px;   /* Height of the footer */
+}
 footer {
-    border-top: 1px solid #373A46;
-    font-size: .8em;
+    border-top: 1px solid black;
+    font-size: 10px;
+    position: fixed;
+    bottom:0;
+    right:0;
+    left:0;
+    width:100%;
+    background-color: white;
 }
