--- a/css/style.css
+++ b/css/style.css
@@ -41,11 +41,12 @@ body {
 
 p {
     font-size: 20px;
-    line-height: 1.4em;
+    line-height:1.25;
     color: #333;
     word-wrap: break-word;
 }
-
+p.ex2{
+    margin:25px;
 }
 .imagewrapper{
     position: absolute;
