--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,9 @@ ul.posts {
     margin: 20px auto 40px; 
     font-size: 1.5em;
 }
+.thumbnail portfolio-thumbnail {
+	left: 200px;
+}
 #body {
    padding:10px;
    padding-bottom:60px;   /* Height of the footer */
