--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 h1 {
 	color: white;
-	font-size: 30px;	
+	font-size: 40px;	
 }
 body {
   margin: 0;
@@ -40,8 +40,9 @@ body {
 }
 
 p {
-    font-size: 20px;
-    line-height:1.25;
+    margin-top: 40px;
+    font-size: 25px;
+    line-height:1.5;
     color: #333;
     word-wrap: break-word;
 }
