--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,12 @@ h1 {
 	color: white;
 	font-size: 40px;	
 }
+h2{
+	color:black;
+	font-size:45px;
+
+}
+
 body {
   margin: 0;
     padding-bottom: 60px;
